--- a/reggioStreet-backend/src/main/resources/application.properties
+++ b/reggioStreet-backend/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 # to show the query that JPA is firing behind the scene
 spring.jpa.show-sql=true
+
+# CREDENTIALS to access 
+spring.security.user.name=luci
+spring.security.user.password=luciluci
