--- a/reggioStreet-backend/src/main/resources/application.properties
+++ b/reggioStreet-backend/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
 # CREDENTIALS to access 
-spring.security.user.name=luci
-spring.security.user.password=luciluci
+#spring.security.user.name=luci
+#spring.security.user.password=luciluci
